--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ngrx/schematics": "^12.2.0",
     "@ngrx/store": "^12.2.0",
     "@ngrx/store-devtools": "^12.2.0",
+    "@types/uuid": "^8.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
